--- a/src/main/resources/fxml/aircraft_data.fxml
+++ b/src/main/resources/fxml/aircraft_data.fxml
@@ -1,72 +1,132 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.Separator?>
-<?import javafx.scene.control.TableColumn?>
-<?import javafx.scene.control.TableView?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.BorderPane?>
-<?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.VBox?>
-<?import javafx.scene.text.Font?>
+                        <?import javafx.geometry.Insets?>
+                        <?import javafx.scene.control.Button?>
+                        <?import javafx.scene.control.Label?>
+                        <?import javafx.scene.control.Separator?>
+                        <?import javafx.scene.control.TableColumn?>
+                        <?import javafx.scene.control.TableView?>
+                        <?import javafx.scene.control.TextField?>
+                        <?import javafx.scene.layout.BorderPane?>
+                        <?import javafx.scene.layout.GridPane?>
+                        <?import javafx.scene.layout.HBox?>
+                        <?import javafx.scene.layout.VBox?>
+                        <?import javafx.scene.text.Font?>
+                        <?import javafx.scene.image.Image?>
+                        <?import javafx.scene.image.ImageView?>
 
-<BorderPane prefHeight="600.0" prefWidth="800.0" styleClass="module-panel" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.aircraft.controller.AircraftDataController">
-    <top>
-        <VBox spacing="10.0" BorderPane.alignment="CENTER">
-            <children>
-                <Label styleClass="module-title" text="Aircraft Management">
-                    <font>
-                        <Font name="System Bold" size="18.0" />
-                    </font>
-                </Label>
-                <Separator />
-            </children>
-            <padding>
-                <Insets bottom="10.0" left="15.0" right="15.0" top="10.0" />
-            </padding>
-        </VBox>
-    </top>
-    <center>
-        <VBox spacing="20.0" BorderPane.alignment="CENTER">
-            <children>
-                <GridPane hgap="10.0" vgap="15.0">
-                    <columnConstraints>
-                        <javafx.scene.layout.ColumnConstraints hgrow="SOMETIMES" maxWidth="150.0" minWidth="10.0" prefWidth="150.0" />
-                        <javafx.scene.layout.ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                    </columnConstraints>
-                    <rowConstraints>
-                        <javafx.scene.layout.RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                    </rowConstraints>
-                    <children>
-                        <Label text="Matricola Velivolo:" />
-                        <TextField fx:id="matricolaVelivoloField" GridPane.columnIndex="1" />
-                    </children>
-                </GridPane>
-                <HBox alignment="CENTER" spacing="10.0">
-                    <children>
-                        <Button fx:id="saveButton" mnemonicParsing="false" onAction="#onSaveButtonClick" prefWidth="100.0" text="Save" />
-                        <Button mnemonicParsing="false" onAction="#onClearButtonClick" prefWidth="100.0" text="Clear" />
-                    </children>
-                </HBox>
-                <Separator />
-                <Label styleClass="section-title" text="Aircraft List">
-                    <font>
-                        <Font name="System Bold" size="14.0" />
-                    </font>
-                </Label>
-                <TableView fx:id="aircraftTable" prefHeight="200.0" prefWidth="200.0" VBox.vgrow="ALWAYS">
-                    <columns>
-                        <TableColumn fx:id="matricolaVelivoloColumn" prefWidth="250.0" text="Matricola Velivolo" />
-                        <TableColumn fx:id="actionsColumn" prefWidth="350.0" text="Actions" />
-                    </columns>
-                </TableView>
-            </children>
-            <padding>
-                <Insets bottom="15.0" left="15.0" right="15.0" top="5.0" />
-            </padding>
-        </VBox>
-    </center>
-</BorderPane>
+                        <BorderPane prefHeight="600.0" prefWidth="800.0" styleClass="main-pane" stylesheets="@../css/wepon_load.css"
+                                    xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.aircraft.controller.AircraftDataController">
+                          <top>
+                              <VBox spacing="10.0" alignment="CENTER" BorderPane.alignment="CENTER">
+                                  <children>
+                                      <Label styleClass="module-title" text="AIRCRAFT MANAGEMENT" alignment="CENTER" textAlignment="CENTER">
+                                          <font>
+                                              <Font name="System Bold" size="18.0" />
+                                          </font>
+                                          <VBox.margin>
+                                              <Insets top="30.0" />
+                                          </VBox.margin>
+                                      </Label>
+                                  </children>
+                                  <padding>
+                                      <Insets bottom="10.0" left="15.0" right="15.0" top="10.0" />
+                                  </padding>
+                              </VBox>
+                          </top>
+                            <center>
+                                <VBox spacing="10.0" BorderPane.alignment="CENTER">
+                                    <children>
+                                        <!-- Main Screen - Navigation Buttons -->
+                                        <VBox fx:id="mainScreen" alignment="CENTER" spacing="20.0" styleClass="form-container-center">
+                                            <!-- Aircraft Image -->
+                                            <HBox alignment="CENTER">
+                                                <ImageView fitWidth="450.0" preserveRatio="true">
+                                                    <Image url="@../images/wepon_master_plane.png" />
+                                                </ImageView>
+                                                <VBox.margin>
+                                                    <Insets bottom="40.0" />
+                                                </VBox.margin>
+                                            </HBox>
+
+                                            <HBox alignment="CENTER" spacing="20.0">
+                                                <Button onAction="#onInsertNewDataClick" styleClass="action-button" text="INSERT NEW DATA" />
+                                                <Button onAction="#onViewAircraftListClick" styleClass="action-button" text="VIEW AIRCRAFT LIST" />
+                                            </HBox>
+                                        </VBox>
+
+                                        <!-- Form Screen - Data Entry -->
+                                        <VBox fx:id="formScreen" alignment="TOP_CENTER" spacing="20.0" styleClass="form-container-center" visible="false" managed="false">
+                                            <children>
+                                                <Label styleClass="section-title" text="AIRCRAFT DETAILS">
+                                                    <font>
+                                                        <Font name="System Bold" size="14.0" />
+                                                    </font>
+                                                </Label>
+                                                <VBox styleClass="modern-form-container" spacing="15.0">
+                                                    <padding>
+                                                        <Insets bottom="20.0" left="20.0" right="20.0" top="10.0" />
+                                                    </padding>
+                                                    <children>
+                                                        <GridPane hgap="20.0" vgap="15.0">
+                                                            <columnConstraints>
+                                                                <javafx.scene.layout.ColumnConstraints hgrow="SOMETIMES" maxWidth="150.0" minWidth="10.0" prefWidth="150.0" />
+                                                                <javafx.scene.layout.ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="200.0" />
+                                                            </columnConstraints>
+                                                            <rowConstraints>
+                                                                <javafx.scene.layout.RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                                            </rowConstraints>
+                                                            <children>
+                                                                <Label styleClass="form-label" text="Matricola Velivolo:" />
+                                                                <TextField fx:id="registrationField" styleClass="modern-form-field" GridPane.columnIndex="1" />
+                                                            </children>
+                                                        </GridPane>
+
+                                                        <HBox alignment="CENTER" spacing="15.0">
+                                                            <children>
+                                                                <Button fx:id="saveButton" onAction="#onSaveButtonClick" styleClass="action-button" text="SAVE" />
+                                                                <Button onAction="#onClearButtonClick" styleClass="action-button" text="CLEAR" />
+                                                                <Button onAction="#onBackButtonClick" styleClass="action-button" text="BACK" />
+                                                            </children>
+                                                        </HBox>
+                                                    </children>
+                                                </VBox>
+                                            </children>
+                                        </VBox>
+
+                                        <!-- List Screen - Data View -->
+                                        <VBox fx:id="listScreen" spacing="15.0" styleClass="list-pane" visible="false" managed="false">
+                                            <children>
+                                                <Label styleClass="section-title" text="AIRCRAFT LIST">
+                                                    <font>
+                                                        <Font name="System Bold" size="14.0" />
+                                                    </font>
+                                                </Label>
+                                                <TableView fx:id="aircraftTable" prefHeight="400.0" styleClass="weapon-table">
+                                                    <columns>
+                                                        <TableColumn fx:id="registrationColumn" prefWidth="250.0" text="Matricola Velivolo" />
+                                                    </columns>
+                                                </TableView>
+                                                <HBox alignment="CENTER" spacing="15.0">
+                                                    <children>
+                                                        <Button onAction="#onEditButtonClick" styleClass="action-button" text="EDIT" />
+                                                        <Button onAction="#onDeleteButtonClick" styleClass="action-button" text="DELETE" />
+                                                        <Button onAction="#onBackButtonClick" styleClass="action-button" text="BACK" />
+                                                    </children>
+                                                </HBox>
+                                            </children>
+                                        </VBox>
+                                    </children>
+                                    <padding>
+                                        <Insets bottom="15.0" left="15.0" right="15.0" top="15.0" />
+                                    </padding>
+                                </VBox>
+                            </center>
+                            <bottom>
+                                <HBox alignment="CENTER_RIGHT" spacing="10.0" BorderPane.alignment="CENTER">
+                                    <padding>
+                                        <Insets bottom="15.0" left="15.0" right="15.0" top="5.0" />
+                                    </padding>
+                                </HBox>
+                            </bottom>
+                        </BorderPane>
