--- a/src/main/resources/fxml/signup.fxml
+++ b/src/main/resources/fxml/signup.fxml
@@ -14,7 +14,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import java.net.URL?>
 
-<StackPane prefHeight="700.0" prefWidth="900.0" styleClass="login-background" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.aircraft.controller.LoginController">
+<StackPane prefHeight="700.0" prefWidth="900.0" styleClass="login-background" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.aircraft.controller.SignupController">
     <stylesheets>
         <URL value="@../css/login.css" />
     </stylesheets>
@@ -27,7 +27,7 @@
                         <Insets bottom="40.0" left="40.0" right="40.0" top="60.0" />
                     </padding>
                     <children>
-                        <!-- Logo - significantly larger -->
+                        <!-- Logo -->
                         <ImageView fitHeight="120.0" fitWidth="120.0" pickOnBounds="true" preserveRatio="true"
                                    VBox.vgrow="NEVER">
                             <image>
@@ -38,14 +38,14 @@
                             </VBox.margin>
                         </ImageView>
 
-                        <!-- System name - CLIMS -->
-                        <Label styleClass="system-name" text="CLIMS">
+                        <!-- System name -->
+                        <Label styleClass="system-name" text="Create Account">
                             <VBox.margin>
                                 <Insets bottom="20.0" />
                             </VBox.margin>
                         </Label>
 
-                        <!-- Login form - moved up closer to CLIMS -->
+                        <!-- Signup form -->
                         <TextField fx:id="usernameField" promptText="Username" styleClass="login-field">
                             <VBox.margin>
                                 <Insets bottom="10.0" />
@@ -54,23 +54,29 @@
 
                         <PasswordField fx:id="passwordField" promptText="Password" styleClass="login-field">
                             <VBox.margin>
+                                <Insets bottom="10.0" />
+                            </VBox.margin>
+                        </PasswordField>
+
+                        <PasswordField fx:id="confirmPasswordField" promptText="Confirm Password" styleClass="login-field">
+                            <VBox.margin>
                                 <Insets bottom="25.0" />
                             </VBox.margin>
                         </PasswordField>
 
-                        <!-- Login button -->
-                        <Button fx:id="loginButton" defaultButton="true" mnemonicParsing="false"
-                                onAction="#onLoginButtonClick" styleClass="login-button"
-                                text="Login" maxWidth="Infinity" />
+                        <!-- Signup button -->
+                        <Button fx:id="signupButton" defaultButton="true" mnemonicParsing="false"
+                                onAction="#onSignupButtonClick" styleClass="login-button"
+                                text="Create Account" maxWidth="Infinity" />
 
-                        <!-- New user link -->
+                        <!-- Back to login link -->
                         <HBox alignment="CENTER" spacing="5.0">
                             <VBox.margin>
                                 <Insets top="20.0" />
                             </VBox.margin>
                             <children>
-                                <Label styleClass="secondary-text" text="New user?" />
-                                <Hyperlink fx:id="signUpLink" onAction="#onSignUpLinkClick" styleClass="signup-link" text="Create account" />
+                                <Label styleClass="secondary-text" text="Already have an account?" />
+                                <Hyperlink fx:id="loginLink" onAction="#onLoginLinkClick" styleClass="signup-link" text="Login" />
                             </children>
                         </HBox>
                     </children>
