--- a/src/main/resources/fxml/weapon_configuration.fxml
+++ b/src/main/resources/fxml/weapon_configuration.fxml
@@ -1,112 +1,122 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ComboBox?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.Separator?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.BorderPane?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.RowConstraints?>
-<?import javafx.scene.layout.VBox?>
-<?import javafx.scene.text.Font?>
+                <?import javafx.geometry.Insets?>
+                <?import javafx.scene.control.Button?>
+                <?import javafx.scene.control.Label?>
+                <?import javafx.scene.control.Separator?>
+                <?import javafx.scene.control.TableColumn?>
+                <?import javafx.scene.control.TableView?>
+                <?import javafx.scene.control.TextField?>
+                <?import javafx.scene.layout.BorderPane?>
+                <?import javafx.scene.layout.GridPane?>
+                <?import javafx.scene.layout.HBox?>
+                <?import javafx.scene.layout.VBox?>
+                <?import javafx.scene.text.Font?>
 
-<BorderPane prefHeight="500.0" prefWidth="600.0" styleClass="module-panel" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.aircraft.controller.WeaponConfigurationController">
-    <top>
-        <VBox spacing="10.0" BorderPane.alignment="CENTER">
-            <children>
-                <Label styleClass="module-title" text="Weapon Configuration">
-                    <font>
-                        <Font name="System Bold" size="18.0" />
-                    </font>
-                </Label>
-                <Separator />
-            </children>
-            <padding>
-                <Insets bottom="10.0" left="15.0" right="15.0" top="10.0" />
-            </padding>
-        </VBox>
-    </top>
-    <center>
-        <VBox spacing="15.0" BorderPane.alignment="CENTER">
-            <children>
-                <VBox fx:id="positionContainer" spacing="10.0">
-                    <children>
-                        <GridPane hgap="10.0" vgap="10.0">
-                            <columnConstraints>
-                                <ColumnConstraints hgrow="SOMETIMES" maxWidth="150.0" minWidth="10.0" prefWidth="100.0" />
-                                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="200.0" />
-                            </columnConstraints>
-                            <rowConstraints>
-                                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                            </rowConstraints>
+                <BorderPane prefHeight="600.0" prefWidth="800.0" styleClass="main-pane" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.aircraft.controller.AircraftDataController">
+                    <top>
+                        <VBox spacing="10.0" BorderPane.alignment="CENTER">
                             <children>
-                                <Label text="Position:" />
-                                <Label text="Launcher:" GridPane.rowIndex="1" />
-                                <Label text="Launcher Serial:" GridPane.rowIndex="2" />
-                                <Label text="Weapon:" GridPane.rowIndex="3" />
-                                <Label text="Weapon Serial:" GridPane.rowIndex="4" />
-                                <ComboBox fx:id="positionComboBox" prefWidth="200.0" GridPane.columnIndex="1" />
-                                <ComboBox fx:id="launcherComboBox" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-                                <TextField fx:id="launcherSerialField" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-                                <ComboBox fx:id="weaponComboBox" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="3" />
-                                <TextField fx:id="weaponSerialField" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+                                <Label styleClass="module-title" text="Aircraft Management">
+                                    <font>
+                                        <Font name="System Bold" size="18.0" />
+                                    </font>
+                                </Label>
+                                <Separator />
                             </children>
-                        </GridPane>
-                        <HBox alignment="CENTER_RIGHT" spacing="10.0">
+                            <padding>
+                                <Insets bottom="10.0" left="15.0" right="15.0" top="10.0" />
+                            </padding>
+                        </VBox>
+                    </top>
+                    <center>
+                        <VBox spacing="10.0" BorderPane.alignment="CENTER">
                             <children>
-                                <Button fx:id="addButton" mnemonicParsing="false" onAction="#onAddButtonClick" text="Add" />
+                                <!-- Main Screen - Navigation Buttons -->
+                                <VBox fx:id="mainScreen" alignment="CENTER" spacing="20.0" styleClass="form-container-center">
+                                    <HBox alignment="CENTER" spacing="20.0">
+                                        <Button onAction="#onInsertNewDataClick" styleClass="action-button" text="INSERT NEW DATA" />
+                                        <Button onAction="#onViewAircraftListClick" styleClass="action-button" text="VIEW AIRCRAFT LIST" />
+                                    </HBox>
+
+                                    <!-- Aircraft Visualization Placeholder -->
+                                    <VBox alignment="CENTER" styleClass="aircraft-visual-container" prefHeight="300.0">
+                                        <Label text="Aircraft Visualization" styleClass="section-title" />
+                                    </VBox>
+                                </VBox>
+
+                                <!-- Form Screen - Data Entry -->
+                                <VBox fx:id="formScreen" alignment="TOP_CENTER" spacing="20.0" styleClass="form-container-center" visible="false" managed="false">
+                                    <children>
+                                        <Label styleClass="section-title" text="Aircraft Details">
+                                            <font>
+                                                <Font name="System Bold" size="14.0" />
+                                            </font>
+                                        </Label>
+                                        <VBox styleClass="modern-form-container" spacing="15.0">
+                                            <padding>
+                                                <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
+                                            </padding>
+                                            <children>
+                                                <GridPane hgap="20.0" vgap="15.0">
+                                                    <columnConstraints>
+                                                        <javafx.scene.layout.ColumnConstraints hgrow="SOMETIMES" maxWidth="150.0" minWidth="10.0" prefWidth="150.0" />
+                                                        <javafx.scene.layout.ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="200.0" />
+                                                    </columnConstraints>
+                                                    <rowConstraints>
+                                                        <javafx.scene.layout.RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                                    </rowConstraints>
+                                                    <children>
+                                                        <Label styleClass="form-label" text="Matricola Velivolo:" />
+                                                        <TextField fx:id="registrationField" styleClass="modern-form-field" GridPane.columnIndex="1" />
+                                                    </children>
+                                                </GridPane>
+
+                                                <HBox alignment="CENTER" spacing="15.0">
+                                                    <children>
+                                                        <Button fx:id="saveButton" onAction="#onSaveButtonClick" styleClass="action-button" text="SAVE" />
+                                                        <Button onAction="#onClearButtonClick" styleClass="action-button" text="CLEAR" />
+                                                        <Button onAction="#onBackButtonClick" styleClass="action-button" text="BACK" />
+                                                    </children>
+                                                </HBox>
+                                            </children>
+                                        </VBox>
+                                    </children>
+                                </VBox>
+
+                                <!-- List Screen - Data View -->
+                                <VBox fx:id="listScreen" spacing="15.0" styleClass="list-pane" visible="false" managed="false">
+                                    <children>
+                                        <Label styleClass="section-title" text="Aircraft List">
+                                            <font>
+                                                <Font name="System Bold" size="14.0" />
+                                            </font>
+                                        </Label>
+                                        <TableView fx:id="aircraftTable" prefHeight="400.0" styleClass="weapon-table">
+                                            <columns>
+                                                <TableColumn fx:id="registrationColumn" prefWidth="250.0" text="Matricola Velivolo" />
+                                            </columns>
+                                        </TableView>
+                                        <HBox alignment="CENTER" spacing="15.0">
+                                            <children>
+                                                <Button onAction="#onEditButtonClick" styleClass="action-button" text="EDIT" />
+                                                <Button onAction="#onDeleteButtonClick" styleClass="action-button" text="DELETE" />
+                                                <Button onAction="#onBackButtonClick" styleClass="action-button" text="BACK" />
+                                            </children>
+                                        </HBox>
+                                    </children>
+                                </VBox>
                             </children>
+                            <padding>
+                                <Insets bottom="15.0" left="15.0" right="15.0" top="15.0" />
+                            </padding>
+                        </VBox>
+                    </center>
+                    <bottom>
+                        <HBox alignment="CENTER_RIGHT" spacing="10.0" BorderPane.alignment="CENTER">
+                            <padding>
+                                <Insets bottom="15.0" left="15.0" right="15.0" top="5.0" />
+                            </padding>
                         </HBox>
-                    </children>
-                </VBox>
-                <Separator />
-                <Label styleClass="section-title" text="Selected Positions">
-                    <font>
-                        <Font name="System Bold" size="14.0" />
-                    </font>
-                </Label>
-                <GridPane fx:id="positionsGrid" hgap="10.0" vgap="5.0">
-                    <columnConstraints>
-                        <ColumnConstraints hgrow="SOMETIMES" minWidth="80.0" prefWidth="100.0" />
-                        <ColumnConstraints hgrow="SOMETIMES" minWidth="80.0" prefWidth="100.0" />
-                        <ColumnConstraints hgrow="SOMETIMES" minWidth="120.0" prefWidth="150.0" />
-                        <ColumnConstraints hgrow="SOMETIMES" minWidth="100.0" prefWidth="120.0" />
-                        <ColumnConstraints hgrow="SOMETIMES" minWidth="80.0" prefWidth="100.0" />
-                    </columnConstraints>
-                    <rowConstraints>
-                        <RowConstraints minHeight="30.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                    </rowConstraints>
-                    <children>
-                        <Label text="Position" />
-                        <Label text="Type" GridPane.columnIndex="1" />
-                        <Label text="Name" GridPane.columnIndex="2" />
-                        <Label text="Serial Number" GridPane.columnIndex="3" />
-                        <Label text="Actions" GridPane.columnIndex="4" />
-                    </children>
-                </GridPane>
-            </children>
-            <padding>
-                <Insets bottom="15.0" left="15.0" right="15.0" top="5.0" />
-            </padding>
-        </VBox>
-    </center>
-    <bottom>
-        <HBox alignment="CENTER_RIGHT" spacing="10.0" BorderPane.alignment="CENTER">
-            <children>
-                <Button fx:id="cancelButton" mnemonicParsing="false" onAction="#onCancelButtonClick" text="Cancel" />
-                <Button fx:id="saveButton" defaultButton="true" mnemonicParsing="false" onAction="#onSaveButtonClick" text="Save" />
-            </children>
-            <padding>
-                <Insets bottom="15.0" left="15.0" right="15.0" top="5.0" />
-            </padding>
-        </HBox>
-    </bottom>
-</BorderPane>
+                    </bottom>
+                </BorderPane>
